<resources>
    <string name="app_name">E_fakkaOkVersion1</string>
    <string name="user">User</string>
    <string name="vendor">Vendor</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="v_message">Make sure that this data is for \n  the person resposible for the vendor \n  it self. </string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept terms & conditions.]]></string>
    <string name="upload_photo">Upload Photo</string>
    <string name="adress">Adress</string>

    <string-array name="industry_array">
        <item>Food</item>
        <item>Health</item>
    </string-array>

</resources>
