<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Activities.Vendor_SignUp">

           <ScrollView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginBottom="20dp"
               >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:layout_margin="8dp"
                   >

                   <AutoCompleteTextView
                       android:id="@+id/name"
                       android:textColor="@color/colorAccent"

                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:layout_margin="8dp"
                       android:hint="@string/name"
                       android:paddingLeft="16dp"
                       android:inputType="text"
                       />

                   <AutoCompleteTextView
                       android:id="@+id/phone"
                       android:layout_width="match_parent"
                       android:textColor="@color/colorAccent"

                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:layout_margin="8dp"
                       android:hint="@string/phone"
                       android:paddingLeft="16dp"
                       android:inputType="phone"
                       />
                   <AutoCompleteTextView
                       android:id="@+id/username"
                       android:layout_width="match_parent"
                       android:textColor="@color/colorAccent"

                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:layout_margin="8dp"
                       android:hint="@string/user_name"
                       android:paddingLeft="16dp"
                       android:inputType="text"
                       />
                   <AutoCompleteTextView
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:textColor="@color/colorAccent"

                       android:background="@drawable/input"
                       android:layout_margin="8dp"
                       android:hint="@string/password"
                       android:paddingLeft="16dp"
                       android:inputType="textPassword"
                       />
                   <AutoCompleteTextView
                       android:id="@+id/confirmpass"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:textColor="@color/colorAccent"

                       android:layout_margin="8dp"
                       android:hint="@string/confirm_password"
                       android:paddingLeft="16dp"
                       android:inputType="textPassword"
                       />
                   <AutoCompleteTextView
                       android:id="@+id/mail"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:textColor="@color/colorAccent"

                       android:layout_margin="8dp"
                       android:hint="@string/e_mail"
                       android:paddingLeft="16dp"
                       android:inputType="textEmailAddress"
                       />
                   <AutoCompleteTextView
                       android:id="@+id/contact"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/input"
                       android:layout_margin="8dp"
                       android:textColor="@color/colorAccent"

                       android:hint="@string/contact"
                       android:paddingLeft="16dp"
                       android:inputType="phone"

                       />
                       <Spinner
                           android:id="@+id/industry"
                           android:background="@drawable/button_gray"
                           android:layout_width="match_parent"
                           android:layout_height="40dp"></Spinner>


                   <de.hdodenhof.circleimageview.CircleImageView
                       android:id="@+id/logo"
                       android:visibility="gone"
                       android:layout_width="120dp"
                       android:layout_height="120dp"
                       android:layout_margin="8dp"
                       android:src="@drawable/logo"
                       android:layout_gravity="center"/>

                   <Button
                       android:id="@+id/upload_logo"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:background="@drawable/button_gray"
                       android:layout_margin="16dp"
                       android:textColor="@color/colorPrimary"
                       android:padding="4dp"
                       android:text="@string/upload_logo"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:textColor="@color/white"
                       android:text="@string/v_message"
                       />
                   <CheckBox
                       android:id="@+id/accept_terms"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/accept_terms_amp_conditions"
                       android:textColor="@color/white"
                       android:layout_gravity="center"
                       android:layout_marginTop="16dp"
                       />

                   <Button
                       android:id="@+id/signup"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:background="@drawable/button_yellow"
                       android:layout_margin="16dp"
                       android:textColor="@color/colorPrimary"
                       android:padding="4dp"
                       android:text="@string/sign_up"
                       />
               </LinearLayout>
           </ScrollView>
    <ProgressBar
        android:id="@+id/progress"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</FrameLayout>