<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Activities.User_SignUP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/firstname"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/input"
                    android:layout_margin="8dp"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/first_name"
                    android:paddingLeft="16dp"
                    android:inputType="text"
                    />
                <AutoCompleteTextView
                    android:id="@+id/lastname"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="@color/colorAccent"

                    android:background="@drawable/input"
                    android:layout_margin="8dp"
                    android:hint="@string/last_name"
                    android:paddingLeft="16dp"
                    android:inputType="text"
                    />
            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:hint="@string/phone"
                android:textColor="@color/colorAccent"

                android:paddingLeft="16dp"
                android:inputType="phone"
                />
            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:textColor="@color/colorAccent"

                android:hint="@string/user_name"
                android:paddingLeft="16dp"
                android:inputType="text"
                />
            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:hint="@string/password"
                android:textColor="@color/colorAccent"

                android:paddingLeft="16dp"
                android:inputType="textPassword"
                />
            <AutoCompleteTextView
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:textColor="@color/colorAccent"

                android:hint="@string/confirm_password"
                android:paddingLeft="16dp"
                android:inputType="textPassword"
                />
            <AutoCompleteTextView
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:hint="@string/e_mail"
                android:paddingLeft="16dp"
                android:textColor="@color/colorAccent"

                android:inputType="textEmailAddress"
                />
            <AutoCompleteTextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:hint="@string/contact"
                android:paddingLeft="16dp"
                android:textColor="@color/colorAccent"

                android:inputType="phone"

                />
            <AutoCompleteTextView
                android:id="@+id/created_by"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input"
                android:layout_margin="8dp"
                android:hint="Created By Code"
                android:paddingLeft="16dp"
                android:inputType="text"
                android:textColor="@color/colorAccent"

                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:visibility="gone"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/upload_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_gray"
                android:layout_margin="16dp"
                android:textColor="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/upload_photo"
                />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:layout_marginRight="100dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/social_strok"
                    android:src="@drawable/facebook"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/google"
                    android:layout_width="50dp"
                    android:layout_margin="10dp"
                    android:layout_height="50dp"
                    android:background="@drawable/social_strok"
                    android:src="@drawable/gmail"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_amp_conditions"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_yellow"
                android:layout_margin="16dp"
                android:textColor="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/sign_up"
                />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</FrameLayout>